--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,6 @@
-blank_issues_enabled: true
+blank_issues_enabled: false
+contact_links:
+  - name: Bug-Report
+    about: Report bugs here
+  - name: Feature requests
+    about: Request for a new feature here
